--- a/APISourceCode/package.json
+++ b/APISourceCode/package.json
@@ -1,7 +1,6 @@
 {
   "name": "onlinestoreapi",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -15,5 +14,11 @@
     "passport": "^0.5.0",
     "passport-http": "^0.3.0",
     "uuid": "^8.3.2"
+  },
+  "description": "",
+  "devDependencies": {
+    "chai": "^4.3.4",
+    "chai-http": "^4.3.0",
+    "mocha": "^9.1.2"
   }
 }
